automation/spinnaker/setup/utils/expose/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-ingress
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.global-static-ip-name: spinnaker-ingress
    networking.gke.io/managed-certificates: "spin-gate-certificate, spin-deck-certificate"
spec:
  rules:
  - host: demo-spinnaker.lab.injenia.it
    http:
      paths:
      - backend:
          serviceName: spin-deck-nodeport
          servicePort: 9000
        path: /
  - host: demo-spinnaker-api.lab.injenia.it
    http:
      paths:
      - backend:
          serviceName: spin-gate-nodeport
          servicePort: 8084
        path: /
